--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> males bet suki, ngoding ngoding. </title>
   </head>
 <body> 
-  <h1>tiap hari di suruh ortu ngoding ngoding karna udh di beliin pc tapi malah cmn main "GAME"... </h1>
+  <h1>Tiap hari di suruh ortu ngoding ngoding karna udh di beliin pc tapi malah cmn main "GAME"... </h1>
   <p>kan gereget wok.</p>
   <p>suruh bahasa inggris lah, suruh coding lah</p>
   <p>padahal belajar nya pas mereka lagi kerja jir</p>
