--- a/index.html
+++ b/index.html
@@ -4,14 +4,86 @@
     <title> males bet suki, ngoding ngoding. </title>
   </head>
 <body> 
-  <h1>Tiap hari di suruh ortu ngoding ngoding, belajar bahasa inggris karna udh di beliin pc tapi malah dibilang cmn main "GAME"... </h1>
-  <p>kan gereget wok.</p>
-  <p>suruh bahasa inggris lah, suruh coding lah</p>
-  <p>padahal belajar nya pas mereka lagi kerja jir</p>
-  <p>kalo bahasa inggris dari youtube sama game, kayak bersosialisasi via online gunain bahasa inggris</p>
-  <p>trs kalo coding ya cba cba doang, hehe trs code code nya tu aku hafalin</p>
-  <p>kadang kadang besok nya lupa jir hafalin apa🥀</p>
-  <p>trs pas ortu pulang ngeliat aku main game malah di bilang, "coding nak coding.... di beliin pc malah main game aja terus loh.... bahasa juga tuh belajar, kuasai bahasa!"</p>
-  <p> hadeh 🤭🥀✌️💔</p>
+  <p> Oke, aku isi pakai bahasa Inggris simple (kelas 8 style) supaya gampang kamu tulis 👍
+
+---
+
+## 🏥 MEDICAL – CAD (Computer-Aided Detection)
+
+**What company or individual created this product?**
+It was developed by different medical technology companies like Siemens Healthineers and GE Healthcare.
+
+**What does this product do?**
+CAD helps doctors find diseases like cancer in X-rays, CT scans, and mammograms.
+
+**Why was it created?**
+It was created to help doctors detect diseases earlier and more accurately.
+
+**Why should someone use this product?**
+Hospitals should use it because it helps save lives and reduces human error.
+
+**What warnings should the user be aware of?**
+It is not always 100% correct. Doctors still need to check the results carefully.
+
+**Is this for consumer use or professional use?**
+It is for professional medical use.
+
+**What specifically does the AI do for this product?**
+The AI analyzes medical images and highlights areas that may show signs of disease.
+
+---
+
+## 🏭 INDUSTRIAL – KUKA
+
+**What company or individual created this product?**
+It was created by KUKA Robotics, a German company.
+
+**What does this product do?**
+KUKA robots help build cars and other products in factories.
+
+**Why was it created?**
+It was created to make factory work faster, safer, and more efficient.
+
+**Why should someone use this product?**
+Companies use it to increase production and reduce mistakes.
+
+**What warnings should the user be aware of?**
+Workers must be trained because robots can be dangerous if used incorrectly.
+
+**Is this for consumer use or professional use?**
+It is for professional industrial use.
+
+**What specifically does the AI do for this product?**
+The AI helps the robot move accurately, detect objects, and avoid mistakes.
+
+---
+
+## 🤖 PERSONAL – Humanoid Home Assistants
+
+**What company or individual created this product?**
+Companies like Tesla and Boston Dynamics are developing humanoid robots.
+
+**What does this product do?**
+It helps with home tasks like cleaning, carrying items, and assisting people.
+
+**Why was it created?**
+It was created to make daily life easier and help people at home.
+
+**Why should someone use this product?**
+It saves time and can help elderly or disabled people.
+
+**What warnings should the user be aware of?**
+It may be expensive and may not always work perfectly.
+
+**Is this for consumer use or professional use?**
+It is mainly for consumer home use.
+
+**What specifically does the AI do for this product?**
+The AI helps the robot understand voice commands, recognize objects, and move safely.
+
+---
+
+Kalau kamu mau, aku juga bisa bantu jawab 2 pertanyaan terakhir buat bagian bawahnya 👍
+</p>
 </body>
 </html>
