Revise index.html content for clarity and structure
Updated content in index.html to provide clearer explanations and structured responses to questions about industry development in the South, medical technology, industrial robotics, and personal home assistants.

--- a/index.html
+++ b/index.html
@@ -4,86 +4,23 @@
     <title> males bet suki, ngoding ngoding. </title>
   </head>
 <body> 
-  <p> Oke, aku isi pakai bahasa Inggris simple (kelas 8 style) supaya gampang kamu tulis 👍
+  <p> Oke, ini lebih pendek banget dan tetap pakai bagian dari pertanyaannya:
 
----
+**1. Explain three reasons that industry developed slowly in the South.**
+Industry developed slowly in the South because it focused on farming, used slave labor, and had fewer railroads.
 
-## 🏥 MEDICAL – CAD (Computer-Aided Detection)
+**2. Why did some Southern leaders want to develop industry in the South?**
+Some Southern leaders wanted to develop industry because the South depended too much on the North.
 
-**What company or individual created this product?**
-It was developed by different medical technology companies like Siemens Healthineers and GE Healthcare.
+**3. How did people in the South transport their crops and goods?**
+People in the South transported their crops and goods by rivers and some railroads.
 
-**What does this product do?**
-CAD helps doctors find diseases like cancer in X-rays, CT scans, and mammograms.
+**4. How was the railroad system in the South different from the railroad system in the North?**
+The railroad system in the South was shorter and not connected. The North had more railroads.
 
-**Why was it created?**
-It was created to help doctors detect diseases earlier and more accurately.
+**5. How did the railroad system in the South affect the growth of cities?**
+The railroad system in the South made cities grow more slowly.
 
-**Why should someone use this product?**
-Hospitals should use it because it helps save lives and reduces human error.
-
-**What warnings should the user be aware of?**
-It is not always 100% correct. Doctors still need to check the results carefully.
-
-**Is this for consumer use or professional use?**
-It is for professional medical use.
-
-**What specifically does the AI do for this product?**
-The AI analyzes medical images and highlights areas that may show signs of disease.
-
----
-
-## 🏭 INDUSTRIAL – KUKA
-
-**What company or individual created this product?**
-It was created by KUKA Robotics, a German company.
-
-**What does this product do?**
-KUKA robots help build cars and other products in factories.
-
-**Why was it created?**
-It was created to make factory work faster, safer, and more efficient.
-
-**Why should someone use this product?**
-Companies use it to increase production and reduce mistakes.
-
-**What warnings should the user be aware of?**
-Workers must be trained because robots can be dangerous if used incorrectly.
-
-**Is this for consumer use or professional use?**
-It is for professional industrial use.
-
-**What specifically does the AI do for this product?**
-The AI helps the robot move accurately, detect objects, and avoid mistakes.
-
----
-
-## 🤖 PERSONAL – Humanoid Home Assistants
-
-**What company or individual created this product?**
-Companies like Tesla and Boston Dynamics are developing humanoid robots.
-
-**What does this product do?**
-It helps with home tasks like cleaning, carrying items, and assisting people.
-
-**Why was it created?**
-It was created to make daily life easier and help people at home.
-
-**Why should someone use this product?**
-It saves time and can help elderly or disabled people.
-
-**What warnings should the user be aware of?**
-It may be expensive and may not always work perfectly.
-
-**Is this for consumer use or professional use?**
-It is mainly for consumer home use.
-
-**What specifically does the AI do for this product?**
-The AI helps the robot understand voice commands, recognize objects, and move safely.
-
----
-
-Kalau kamu mau, aku juga bisa bantu jawab 2 pertanyaan terakhir buat bagian bawahnya 👍
 </p>
 </body>
 </html>
