Clean up index.html by removing content
Removed detailed questions and answers about Southern industry from the HTML content.

--- a/index.html
+++ b/index.html
@@ -4,23 +4,7 @@
     <title> males bet suki, ngoding ngoding. </title>
   </head>
 <body> 
-  <p> Oke, ini lebih pendek banget dan tetap pakai bagian dari pertanyaannya:
-
-**1. Explain three reasons that industry developed slowly in the South.**
-Industry developed slowly in the South because it focused on farming, used slave labor, and had fewer railroads.
-
-**2. Why did some Southern leaders want to develop industry in the South?**
-Some Southern leaders wanted to develop industry because the South depended too much on the North.
-
-**3. How did people in the South transport their crops and goods?**
-People in the South transported their crops and goods by rivers and some railroads.
-
-**4. How was the railroad system in the South different from the railroad system in the North?**
-The railroad system in the South was shorter and not connected. The North had more railroads.
-
-**5. How did the railroad system in the South affect the growth of cities?**
-The railroad system in the South made cities grow more slowly.
-
+  <p> oiahwfuiabuiagfiefg
 </p>
 </body>
 </html>
