Revise index.html with CAD information and layout suggestions
Updated content in index.html to provide information about CAD (Computer-Aided Detection) with structured sections and a warning about its limitations.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,47 @@
     <title> males bet suki, ngoding ngoding. </title>
   </head>
 <body> 
-  <p> oiahwfuiabuiagfiefg
+  <p> Oke, ini isi poster kamu tentang **CAD (Computer-Aided Detection)** yang sudah disesuaikan dengan rubric (ada title, 3 text boxes, dan warning). Pendek, jelas, dan gampang dibaca 👇
+
+---
+
+# 🏥 CAD (Computer-Aided Detection)
+
+### AI in Medical Technology
+
+---
+
+## 🔍 What Does CAD Do?
+
+CAD uses artificial intelligence to look at medical images like X-rays and mammograms.
+It helps doctors find signs of diseases such as cancer.
+
+---
+
+## 💡 Why Was It Created?
+
+CAD was created to help doctors detect diseases earlier.
+Early detection can help save lives.
+
+---
+
+## ✅ Why Should People Use It?
+
+* Helps reduce human mistakes
+* Makes diagnosis faster
+* Supports doctors in making decisions
+
+---
+
+## ⚠️ Warning
+
+CAD is not 100% correct.
+Doctors must always review the results carefully.
+
+---
+
+Kalau kamu mau, aku bisa bantu juga bikin layout sederhana (judul besar, warna, bagian mana kiri/kanan biar dapet full points).
+
 </p>
 </body>
 </html>
